fix too large nav title

--- a/less/base/_navs.less
+++ b/less/base/_navs.less
@@ -54,6 +54,7 @@
   a {
     color: @color-text-contrast;
     font-size: 24/@rem;
+    padding: inherit;
   }
 
   a.active, a:hover {
